add o npm start para iniciar a aplicacao

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Teste tecnico",
   "main": "index.js",
   "scripts": {
+    "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Vitor Gonçalves Oliveira",
